--- a/html_css/responsive.css
+++ b/html_css/responsive.css
@@ -3,15 +3,10 @@ div{
 	height: 100px;
 }
 
-.col-4{
+.col-4, .col-6, .col-12{
 	width: 100%;
 }
-.col-6{
-	width: 100%;
-}
-.col-12{
-	width: 100%;
-}
+
 
 @media screen and (min-width: 766px) and (max-width: 960px){
 	.col-4{
